--- a/templates/certificados.html
+++ b/templates/certificados.html
@@ -11,49 +11,68 @@
     .opt_short {display: inline;}
     .opt_full {display: none;}
   }
+
+  {% comment %} Para sempre mostrar a barra de rolagem {% endcomment %}
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  }
 </style>
 
 {% if certificados %}
   {% for documento in certificados %}
-    {% if documento.confidencial %} {% comment %} Para certificados nunca está confidencial. {% endcomment %}
-      <i data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
-    {% else %}
-      <i data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
-    {% endif %}
-    {% if documento.documento and documento.link %}
-        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
-        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
-    {% else %}
-      {% if documento.documento %}
-        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.get_tipo_de_certificado_display}}</a>
-      {% endif %}
-      {% if documento.link %}
-        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
-      {% endif %}
-    {% endif %}
+    <div style="display: flex; align-items: flex-start;">
+      <div style="white-space: nowrap;">
+        {% if documento.confidencial %} {% comment %} Para certificados nunca está confidencial. {% endcomment %}
+          <i data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
+        {% else %}
+          <i data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
+        {% endif %}
+        {% if documento.documento and documento.link %}
+            <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+            <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+        {% else %}
+          {% if documento.documento %}
+            <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.get_tipo_de_certificado_display}}</a>
+          {% endif %}
+          {% if documento.link %}
+            <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
+          {% endif %}
+        {% endif %}
+      </div>
 
-    {% if not projeto %}
-      {% if documento.projeto %}
-        - {{documento.projeto.get_titulo}}
-      {% endif %}
-    {% endif %}  
-    {% if documento.usuario %}
-      - {{ documento.usuario.get_full_name }} 
-    {% endif %}
+      <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; ">
+        {% if not projeto %}
+          {% if documento.projeto %}
+            &nbsp;- {{documento.projeto.get_titulo}}
+          {% endif %}
+        {% endif %}  
+        {% if documento.usuario %}
+          &nbsp;- {{ documento.usuario.get_full_name }}
+        {% endif %}
+        {% if documento.anotacao %}
+          [Obs: {{ documento.anotacao }} ]
+        {% endif %}
+      </div>
 
-    {% if documento.data %}
-      <span class="opt_full">: {{ documento.data|date:"DATE_FORMAT" }}</span>
-      <span class="opt_short">: {{ documento.data|date:"d/m/Y" }}</span>
-    {% endif %}
-    {% if documento.anotacao %}
-              [Obs: {{ documento.anotacao }} ]
-    {% endif %}
-    {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-      <sup>(Inglês)</sup>
-    {% endif %}
-    <br>
+      <div style="white-space: nowrap;">
+        {% if documento.data %}
+          <span class="opt_full">: {{ documento.data|date:"DATE_FORMAT" }}</span>
+          <span class="opt_short">: {{ documento.data|date:"d/m/Y" }}</span>
+        {% endif %}
+        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+          <sup>(Inglês)</sup>
+        {% endif %}
+      </div>
+    </div>
+
   {% empty %}
-    Ainda não existem documentos associados.
+    Ainda não existem certificados associados.
   {% endfor %}
-{% endif %}
 
+{% endif %}
