--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -15,46 +15,53 @@
 
 {% if documentos %}
   {% for documento in documentos %}
-    {% if documento.confidencial %}
-      <i data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
-    {% else %}
-      <i data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
-    {% endif %}
-    {% if documento.documento and documento.link %}
-        {{documento.tipo_documento}}
-        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
-        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
-    {% else %}
-      {% if documento.documento %}
-        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
-      {% endif %}
-      {% if documento.link %}
-        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
-      {% endif %}
-    {% endif %}
+    <div style="display: flex; align-items: flex-start;">
 
-    {% if not projeto %}
-      {% if documento.projeto %}
-        - {{documento.projeto.get_titulo}}
-      {% endif %}
-    {% endif %}  
-    {% if documento.usuario and documento.tipo_documento.individual %}
-      - {{ documento.usuario.get_full_name }}
-    {% endif %}
+      <div style="white-space: nowrap;">
+        {% if documento.confidencial %}
+          <i data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
+        {% else %}
+          <i data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
+        {% endif %}
+        {% if documento.documento and documento.link %}
+            {{documento.tipo_documento}}
+            <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+            <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+        {% else %}
+          {% if documento.documento %}
+            <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+          {% endif %}
+          {% if documento.link %}
+            <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+          {% endif %}
+        {% endif %}
+      </div>
 
-    {% if documento.data %}
-      <span class="opt_full">: {{ documento.data|date:"DATE_FORMAT" }}</span>
-      <span class="opt_short">: {{ documento.data|date:"d/m/Y" }}</span>
-    {% endif %}
-    {% if documento.anotacao %}
-              [Obs: {{ documento.anotacao }} ]
-    {% endif %}
-    {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-      <sup>(Inglês)</sup>
-    {% endif %}
-    <br>
+      <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; ">
+        {% if not projeto %}
+          {% if documento.projeto %}
+            &nbsp;- {{documento.projeto.get_titulo}}
+          {% endif %}
+        {% endif %}  
+        {% if documento.usuario and documento.tipo_documento.individual %}
+          &nbsp;- {{ documento.usuario.get_full_name }}
+        {% endif %}
+        {% if documento.anotacao %}
+          [Obs: {{ documento.anotacao }} ]
+        {% endif %}
+      </div>
+
+      <div style="white-space: nowrap;">
+        {% if documento.data %}
+          <span class="opt_full">: {{ documento.data|date:"DATE_FORMAT" }}</span>
+          <span class="opt_short">: {{ documento.data|date:"d/m/Y" }}</span>
+        {% endif %}
+        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+          <sup>(Inglês)</sup>
+        {% endif %}
+      </div>
+    </div>
   {% empty %}
     Ainda não existem documentos associados.
   {% endfor %}
 {% endif %}
-
