--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -60,7 +60,7 @@
             {% endif %}
           </td>
           <td>
-            <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a>
+            <a href="mailto:{{aluno.user.email}}">{{aluno.user.email}}</a>
           </td>
           {% if aluno.curso2 %}
             <td style="color:#{{ aluno.curso2.cor }};">
@@ -348,6 +348,7 @@
             // Hide/Esconde certas colunas
             table.fnSetColumnVis( 1, false );  // esconde Matrícula
             table.fnSetColumnVis( 6, false );  // esconde Linkedin
+            table.fnSetColumnVis( 7, false );  // esconde Telefone
           }
         }
       };
