--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -40,22 +40,25 @@
     {% csrf_token %}
     <label for="titulo_final"><strong>Título Final</strong></label><br>
     <textarea id="titulo_final" name="titulo_final" rows="1" maxlength="{% max_length Projeto 'titulo_final' %}"
+    placeholder="Indique o título final do projeto usado no relatório (se diferente do título original da proposta)"
     >{% if alocado.projeto.titulo_final %}{{alocado.projeto.titulo_final}}{% endif %}</textarea>
     <br><br>
 
-
     <label for="resumo"><strong>Resumo</strong></label><br>
     <textarea id="resumo" name="resumo" rows="6" maxlength="{% max_length Projeto 'resumo' %}"
+    placeholder="Informe o resumo em português do projeto do relatório. Copie diretamente do seu relatório."
     >{% if alocado.projeto.resumo %}{{alocado.projeto.resumo}}{% endif %}</textarea>
     <br><br>
 
     <label for="abstract"><strong>Abstract</strong></label><br>
     <textarea id="abstract" name="abstract" rows="6" maxlength="{% max_length Projeto 'abstract' %}"
+    placeholder="Informe o resumo em inglês do projeto do relatório. Copie diretamente do seu relatório."
     >{% if alocado.projeto.abstract %}{{alocado.projeto.abstract}}{% endif %}</textarea>
     <br><br>
 
     <label for="palavras_chave"><strong>Palavras-chave</strong></label><br>
     <textarea id="palavras_chave" name="palavras_chave" rows="1" maxlength="{% max_length Projeto 'palavras_chave' %}"
+    placeholder="Informe as palavras-chave do projeto do relatório. Copie diretamente do seu relatório."
     >{% if alocado.projeto.palavras_chave %}{{alocado.projeto.palavras_chave}}{% endif %}</textarea>
     <br>
     <small>
@@ -63,7 +66,7 @@
       Copie diretamente do seu relatório.
     </small>
     <div class="text-right">
-      <input class="btn btn-primary btn-sm" type="submit" name="Salvar" value="Salvar" {% if not alocado.projeto %}disabled{% endif %}>
+      <input class="btn btn-primary btn-sm" type="submit" name="Salvar" value="Salvar" {% if professor or not alocado.projeto %}disabled{% endif %}>
     </div>
   </form>
 </div>
@@ -91,7 +94,7 @@
         {% endif %}
       </div>
       <div class="col-md-6">
-        <input type="file" id="zipsite" name="zipsite" accept=".zip" {% if not alocado.projeto %}disabled{% endif %}>
+        <input type="file" id="zipsite" name="zipsite" accept=".zip" {% if professor or not alocado.projeto %}disabled{% endif %}>
         <input class="btn btn-info btn-sm" type="submit" id="Carregar" name="Carregar" value="Carregar" disabled>
         {% if alocado.projeto %}
           <script>
@@ -105,7 +108,7 @@
           </script>
         {% endif %}
         {% if site %}
-          <input class="btn btn-danger btn-sm" type="submit" name="Remover" value="Remover" {% if not alocado.projeto %}disabled{% endif %}>
+          <input class="btn btn-danger btn-sm" type="submit" name="Remover" value="Remover" {% if professor or not alocado.projeto %}disabled{% endif %}>
         {% endif %}
         <br>
         <div style="font-size: 12px; line-height:1.0;">carrega um arquivo .zip com um site estático para o projeto</div>
@@ -121,7 +124,7 @@
     <div style="font-size: 12px; line-height:1.0;">Links para repositórios com dados/códigos dos projeto (para orientador acessar / mantenha privado)</div>
 
     <div class="text-right">
-      <input class="btn btn-primary btn-sm" type="submit" name="Salvar" value="Salvar" {% if not alocado.projeto %}disabled{% endif %}>
+      <input class="btn btn-primary btn-sm" type="submit" name="Salvar" value="Salvar" {% if professor or not alocado.projeto %}disabled{% endif %}>
     </div>
   </form>
 </div>
