--- a/templates/pares.html
+++ b/templates/pares.html
@@ -11,26 +11,28 @@
 
 <table class="tabela_redu_estu table-striped"><tbody>
   {% for alocacao in projeto.alocacao_set.all %}
-    <tr style="padding-left: 18px;">
-      {% with feita=alocacao|aval_pares:tipo_avaliacao %}
-        <td>
-          {% if feita %}<a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}">{% endif %}
-            {{alocacao.aluno}}
-          {% if feita %}</a>{% endif %}
-        </td>
-        <td>
-          {% if feita %}
-            {% if tipo_avaliacao == "intermediaria" and alocacao.avaliacao_intermediaria %}
-              <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">Avaliação de Pares Verificada</a>
-            {% elif tipo_avaliacao == "final" and alocacao.avaliacao_final %}
-              <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">Avaliação de Pares Verificada</a>
-            {% else %}
-              <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:brown">Aguardando Confirmação de Orientador</a>
+    {% if not alocacao.aluno.externo %}
+      <tr style="padding-left: 18px;">
+        {% with feita=alocacao|aval_pares:tipo_avaliacao %}
+          <td>
+            {% if feita %}<a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}">{% endif %}
+              {{alocacao.aluno}}
+            {% if feita %}</a>{% endif %}
+          </td>
+          <td>
+            {% if feita %}
+              {% if tipo_avaliacao == "intermediaria" and alocacao.avaliacao_intermediaria %}
+                <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">Avaliação de Pares Verificada</a>
+              {% elif tipo_avaliacao == "final" and alocacao.avaliacao_final %}
+                <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">Avaliação de Pares Verificada</a>
+              {% else %}
+                <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:brown">Aguardando Confirmação de Orientador</a>
+              {% endif %}
+            {% else %} <span style="color:#DDB300">Aguardando Preenchimento por Estudante </span>
             {% endif %}
-          {% else %} <span style="color:#DDB300">Aguardando Preenchimento por Estudante </span>
-          {% endif %}
-        </td>
-      {% endwith %}
-    </tr>
+          </td>
+        {% endwith %}
+      </tr>
+    {% endif %}
   {% endfor %}
 </tbody></table>
