--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -50,8 +50,13 @@
               <div class="col-sm-8">
                 <select id="event-type" name="event-type" class="form-control">
                   {% for tipo in tipos_eventos %}
+                    {% ifchanged tipo.3 %}
+                      {% if not forloop.first %}</optgroup>{% endif %}
+                      <optgroup label="{% if tipo.3 %}{{tipo.3}}{% else %}-----------{% endif %}">
+                    {% endifchanged %}
                     <option value="{{tipo.0}}" data-color="{{tipo.2}}">{{tipo.1}}</option>
                   {% endfor %}
+                  </optgroup>
                 </select>
               </div>
             </div>
