controle para enviar mensagem para envolvidos na banca

--- a/professores/templates/professores/bancas_view.html
+++ b/professores/templates/professores/bancas_view.html
@@ -329,6 +329,14 @@
   </div>
 
   <div id="div_botao" class="modal-footer">
+
+
+    <small>
+      <input type="checkbox" name="enviar_mensagem" value="sim" checked>
+      Enviar mensagem para envolvidos
+    </small>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
     <button id="fecha_modal" type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
 
     {% if not banca %} 
