--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -34,7 +34,7 @@
     
     <br>
     <label for="trabalhou">
-    Você já trabalhou/trabalha ou estagiou/estagia em alguma empresa?<br>
+    Você já trabalhou/trabalha ou estagiou/estagia em alguma empresa (informe situação)?<br>
     Se sim, qual/quais?
     </label><br>
     <textarea id="trabalhou" name="trabalhou" rows="4" cols="80" maxlength="{% max_length Aluno 'trabalhou' %}" {% if vencido %}disabled{% endif %}>{% if estudante.trabalhou %}{{estudante.trabalhou}}{% endif %}</textarea>
