exibindo o campo de observações para os estudantes

--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -416,6 +416,9 @@
           Estudante não escolheu opções de proposta de projetos<br>
         {% endfor %}
         --------------------------------------------------------------------------<br>
+        {% if estudante.user.observacoes %}
+        <b>OBSERVACÕES:</b><br>
+        {{estudante.user.observacoes|linebreaks}}<br>{% endif %}
         {% if estudante.trabalhou %}
         <b>Você já trabalhou/trabalha/estagiou/estagia/empreende em alguma empresa (informe situação)?</b><br>
         {{estudante.trabalhou|linebreaks}}<br>{% endif %}
