--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -54,9 +54,13 @@
   
   {% comment %} Prenchido pelo estudante {% endcomment %}
 
+  {% if aluno.user.observacoes %}
+    <br><strong>Observações:</strong> {{ aluno.user.observacoes|linebreaks }}
+  {% endif %}
+
   {% if aluno.trabalhou %}
     <br><strong>{{aluno.get_trabalhou_help_text }}</strong> {{ aluno.trabalhou|linebreaks }}
-  {% endif %}  
+  {% endif %}
 
   {% if aluno.social %}
     <br><strong>{{aluno.get_social_help_text }}</strong> {{ aluno.social|linebreaks }}
