--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -125,7 +125,8 @@
               </div>
             </div>
             
-            {% if configuracao.maxMB_filesize %}
+            {% if configuracao.maxMB_filesize and user.tipo_de_usuario != 4 %}
+              {% comment %} Administrador pode enviar arquivos maiores que limite. {% endcomment %}
               <script>
                 document.getElementById("arquivo").onchange = function() {
                   if(this.files && this.files[0] && this.files[0].size > {{configuracao.maxMB_filesize}}*1048576){
